--- a/templates/service.html
+++ b/templates/service.html
@@ -163,23 +163,23 @@
     <style>
         /* Styling for the "Back Now" button */
         .back-now-button {
-            position: fixed; /* Fixes the button to the bottom-right corner */
+            position: fixed; 
             bottom: 10px;
             right: 10px;
-            background-color: #2d7bac; /* Button background color */
-            color: white; /* Button text color */
-            padding: 10px 20px; /* Button padding */
-            border: none; /* No border for the button */
-            border-radius: 5px; /* Rounded corners */
-            cursor: pointer; /* Pointer cursor on hover */
-            font-size: 16px; /* Font size for button text */
-            text-align: center; /* Center the text */
-            text-decoration: none; /* Remove underline from text */
+            background-color: #2d7bac; 
+            color: white; 
+            padding: 10px 20px; 
+            border: none; 
+            border-radius: 5px; 
+            cursor: pointer; 
+            font-size: 16px; 
+            text-align: center; 
+            text-decoration: none; 
         }
 
         /* Hover effect for the "Back Now" button */
         .back-now-button:hover {
-            background-color: #3c5c63; /* Darker background color on hover */
+            background-color: #3c5c63; 
         }
     </style>
     
